--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,4 +1,7 @@
-<link rel="icon" type="image/png" href="/assets/images/favicon-16x16" sizes="16x16">
-<link rel="icon" type="image/png" href="/assets/images/favicon-32x32" sizes="32x32">
-<link rel="icon" type="image/png" href="/assets/images/favicon-48x48" sizes="48x48">
-<link rel="icon" type="image/png" href="/assets/images/favicon-192x192" sizes="192x192">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
